--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,8 @@
   min-height: 600px;
   max-height: 756px;
   position: relative;
-  background-color:#f2f2f2;
+  background-color: #f2f2f2;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
