--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,7 +1,9 @@
 .kaufman {
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   background-color: #1f1f1f;
   margin: 0 auto;
+  position: relative;
+  overflow: hidden;
 }
