--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,6 @@
 .resources__logo-zone {
- width: 1100px;
- margin-top: 80px;
- display:flex;
- justify-content:center;
+  width: 1100px;
+  margin: 80px auto 0;
+  display: flex;
+  justify-content: center;
 }
