--- a/blocks/feynman/__img/feynman__img.css
+++ b/blocks/feynman/__img/feynman__img.css
@@ -1,6 +1,8 @@
 .feynman__img {
   width: 867px;
   height: 637px;
+  background-image: url("../../../images/feynman.png");
+  background-size: cover;
   position: absolute;
   bottom: 0;
   left: 0;
