--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,5 +1,7 @@
 .video__iframes {
-  margin-top: 50px;
+  margin: 50px 0 0;
+  padding: 0;
   display: flex;
   justify-content: flex-start;
+  list-style-type: none;
 }
